--- a/MediaLibrary.csproj
+++ b/MediaLibrary.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Update="nlog.config">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+     <PackageReference Include="NLog.Web.AspNetCore" Version="4.10.0" />
+   </ItemGroup>
 </Project>
